<resources>
    <string name="app_name">fitnessPlanner</string>

    <!-- Main Activity -->
    <string name="btn_create_workout">Create Workout</string>
    <string name="btn_workout_history">Workout History</string>
    <string name="tv_no_workouts">No workouts yet. Create one to get started!</string>

    <!-- Workout Creator -->
    <string name="et_workout_name">Workout Name</string>
    <string name="et_workout_description">Description</string>
    <string name="et_exercise_name">Exercise Name</string>
    <string name="btn_add_exercise">Add Exercise</string>
    <string name="et_reps">Reps</string>
    <string name="spinner_rest_duration">Rest Duration</string>
    <string name="et_custom_rest">Custom Rest (seconds)</string>
    <string name="btn_add_set">Add Set</string>
    <string name="btn_save_workout">Save Workout</string>

    <!-- Workout Executor -->
    <string name="tv_workout_name">Workout Name</string>
    <string name="tv_exercise_name">Exercise Name</string>
    <string name="tv_set_count">Set: 1/1</string>
    <string name="tv_rep_count">Reps: 10</string>
    <string name="tv_timer">00:00</string>
    <string name="btn_next_set">Next Set</string>
    <string name="btn_finish_workout">Finish Workout</string>

    <!-- Workout History -->
    <string name="tv_month_year">January 2026</string>
    <string name="btn_delete_workout">Delete</string>
    <string name="btn_start_workout">Start</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_description">Description</string>
</resources>